--- a/manifest.yml
+++ b/manifest.yml
@@ -8,9 +8,9 @@ applications:
   host: rashional
 env:
     node_env: cloud
-    clarifaiAPIKey: #InsertAPIKeyHere
+    clarifaiAPIKey: b3eacb79c9a94ec99458d2f8bccd476c
     rashionalModelId: rashional
-    mongodbConnectionString: mongodb://<user>:<pass>@ds036967.mlab.com:36967
+    mongodbConnectionString: mongodb://rashional:rashional@ds036967.mlab.com:36967
     mongodbName: rashional
 
     #clientId: {Enter client ID, e.g. app_client_id, and place it here}
